# lyric

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
doc/apiref/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml
lib/: CMakeLists.txt  test_logging.config  test_main.cpp
lib/lyric_analyzer/: CMakeLists.txt
lib/lyric_analyzer/src/: analyzer_result.cpp  analyzer_scan_driver.cpp  class_analyzer_context.cpp  concept_analyzer_context.cpp  entry_analyzer_context.cpp  enum_analyzer_context.cpp  function_analyzer_context.cpp  impl_analyzer_context.cpp  import_analyzer_context.cpp  instance_analyzer_context.cpp  lyric_analyzer.cpp  namespace_analyzer_context.cpp  proc_analyzer_context.cpp  struct_analyzer_context.cpp
lib/lyric_analyzer/test/: CMakeLists.txt  analyze_block_tests.cpp  analyze_class_tests.cpp  analyze_concept_tests.cpp  analyze_enum_tests.cpp  analyze_function_tests.cpp  analyze_instance_tests.cpp  analyze_namespace_tests.cpp  analyze_static_tests.cpp  analyze_struct_tests.cpp  analyze_typename_tests.cpp  base_analyzer_fixture.cpp  base_analyzer_fixture.h
lib/lyric_archiver/: CMakeLists.txt
lib/lyric_archiver/src/: archive_utils.cpp  archiver_result.cpp  archiver_state.cpp  copy_action.cpp  copy_call.cpp  copy_class.cpp  copy_concept.cpp  copy_enum.cpp  copy_field.cpp  copy_impl.cpp  copy_instance.cpp  copy_proc.cpp  copy_struct.cpp  copy_template.cpp  copy_type.cpp  lyric_archiver.cpp  scan_proc.cpp  symbol_reference_set.cpp
lib/lyric_archiver/test/: CMakeLists.txt  archive_call_tests.cpp  archive_class_tests.cpp  archive_concept_tests.cpp  archive_enum_tests.cpp  archive_instance_tests.cpp  archive_struct_tests.cpp  archiver_tester.cpp  archiver_tester.h  base_archiver_fixture.cpp  base_archiver_fixture.h
lib/lyric_assembler/: CMakeLists.txt
lib/lyric_assembler/src/: action_callable.cpp  action_symbol.cpp  argument_variable.cpp  assembler_attrs.cpp  assembler_instructions.cpp  assembler_macro_visitor.cpp  assembler_result.cpp  assembler_tracer.cpp  assembler_types.cpp  assembly_state.cpp  binding_symbol.cpp  block_handle.cpp  call_invoker.cpp  call_symbol.cpp  callable_invoker.cpp  catch_handle.cpp  check_handle.cpp  class_symbol.cpp  cleanup_handle.cpp  code_fragment.cpp  concept_symbol.cpp  constructable_invoker.cpp  ctor_constructable.cpp  enum_symbol.cpp  existential_callable.cpp  existential_invoker.cpp  existential_symbol.cpp  extension_callable.cpp  extension_invoker.cpp  field_symbol.cpp  function_callable.cpp  fundamental_cache.cpp  impl_cache.cpp  impl_handle.cpp  import_cache.cpp  initializer_handle.cpp  instance_symbol.cpp  lexical_variable.cpp  linkage_symbol.cpp  literal_cache.cpp  (+26 more)
lib/lyric_assembler/test/: CMakeLists.txt  allocator_trap_macro_tests.cpp  base_assembler_fixture.cpp  base_assembler_fixture.h  block_handle_tests.cpp  class_symbol_tests.cpp  code_fragment_tests.cpp  load_data_macro_tests.cpp  opcode_macro_tests.cpp  plugin_macro_tests.cpp  protocol_symbol_tests.cpp  struct_symbol_tests.cpp  trap_macro_tests.cpp
lib/lyric_bootstrap/: CMakeLists.txt
lib/lyric_bootstrap/assembly/: builder_state.cpp  builder_state.h  compile_arithmetic.cpp  compile_bool.cpp  compile_char.cpp  compile_char.h  compile_class.cpp  compile_closure.h  compile_comparison.cpp  compile_descriptor.cpp  compile_enum.h  compile_equality.cpp  compile_float.cpp  compile_function.cpp  compile_idea.cpp  compile_idea.h  compile_int.cpp  compile_int.h  compile_iterable.cpp  compile_map.cpp  compile_object.cpp  compile_object.h  compile_ordered.cpp  compile_ordered.h  compile_pair.cpp  compile_prelude.cpp  compile_proposition.cpp  compile_seq.cpp  compile_status.cpp  compile_string.cpp  compile_struct.h  compile_tuple.h  compile_unwrap.cpp  compile_url.cpp  compile_utf8.h  compile_varargs.cpp  compile_varargs.h  lib_builder.cpp
lib/lyric_bootstrap/object/: builder_state.cpp  builder_state.h  compile_action.cpp  compile_action.h  compile_any.cpp  compile_any.h  compile_arithmetic.cpp  compile_arithmetic.h  compile_binding.cpp  compile_binding.h  compile_bool.cpp  (+92 more)
lib/lyric_build/: CMakeLists.txt
lib/lyric_common/: CMakeLists.txt
lib/lyric_compiler/: CMakeLists.txt
lib/lyric_importer/: CMakeLists.txt
lib/lyric_object/: CMakeLists.txt
lib/lyric_optimizer/: CMakeLists.txt
lib/lyric_packaging/: CMakeLists.txt
lib/lyric_parser/: CMakeLists.txt  test-grammar.in
lib/lyric_rewriter/: CMakeLists.txt
lib/lyric_runtime/: CMakeLists.txt
lib/lyric_schema/: CMakeLists.txt
lib/lyric_serde/: CMakeLists.txt
lib/lyric_symbolizer/: CMakeLists.txt
lib/lyric_test/: CMakeLists.txt
lib/lyric_typing/: CMakeLists.txt
lyric_assembler/test/: CMakeLists.txt  block_handle_tests.cpp
lyric_bootstrap/test/: Bool_tests.cpp  CMakeLists.txt  Char_tests.cpp  Float_tests.cpp  Int_tests.cpp  Iterator_tests.cpp  Map_tests.cpp  Nil_tests.cpp  Option_tests.cpp  Pair_tests.cpp  Seq_tests.cpp  Status_tests.cpp  String_tests.cpp  Tuple_tests.cpp  Undef_tests.cpp  Uri_tests.cpp  Url_tests.cpp  assignment_tests.cpp  conditional_tests.cpp  def_tests.cpp  defclass_tests.cpp  defconcept_tests.cpp  defenum_tests.cpp  definstance_tests.cpp  defstruct_tests.cpp  lambda_tests.cpp  match_tests.cpp  namespace_tests.cpp  new_tests.cpp  test_helpers.cpp  test_helpers.h  val_tests.cpp  var_tests.cpp  while_tests.cpp
lyric_build/test/: CMakeLists.txt  builder_tests.cpp  parse_module_task_tests.cpp  sha256_hash_tests.cpp
lyric_compiler/test/: CMakeLists.txt
lyric_packaging/test/: CMakeLists.txt  package_reader_tests.cpp  package_specifier_tests.cpp
lyric_parser/test/: CMakeLists.txt  parse_archetype_tests.cpp
lyric_runtime/: CMakeLists.txt
lyric_runtime/src/: base_ref.cpp  bytecode_interpreter.cpp  bytecode_segment.cpp  call_cell.cpp  chain_loader.cpp  data_cell.cpp  duplex_port.cpp  heap_manager.cpp  interpreter_state.cpp  literal_cell.cpp  port_multiplexer.cpp  ref_handle.cpp  segment_manager.cpp  serialize_value.cpp  stackful_coroutine.cpp  subroutine_manager.cpp  system_scheduler.cpp  task.cpp  type_manager.cpp  virtual_table.cpp
lyric_serde/test/: CMakeLists.txt
(+2118 files in other folders)
