
add_subdirectory(lyric_analyzer)
add_subdirectory(lyric_assembler)
add_subdirectory(lyric_bootstrap)
add_subdirectory(lyric_build)
add_subdirectory(lyric_common)
add_subdirectory(lyric_compiler)
add_subdirectory(lyric_importer)
add_subdirectory(lyric_object)
add_subdirectory(lyric_packaging)
add_subdirectory(lyric_parser)
add_subdirectory(lyric_runtime)
add_subdirectory(lyric_schema)
add_subdirectory(lyric_serde)
add_subdirectory(lyric_symbolizer)
add_subdirectory(lyric_test)
add_subdirectory(lyric_typing)
